# rtsrv

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile
client/: CMakeLists.txt
client/include/client/: grpc_proc.hpp  netlink_neigh.h  netlink_nexthop.h  nexthop_group.hpp  redis_rib.hpp  route_client.hpp  routing.hpp  sot_config.hpp  sra_udp_client.hpp  switch_config.hpp  udp_table_server.hpp  vrf_table.hpp  vrf_udp_client.hpp
client/src/: grpc_proc.cpp  grpc_proc_example.cpp  main.cpp  netlink_neigh.c  netlink_nexthop.c  nexthop_group.cpp  redis_rib.cpp  route_client.cpp  routing.cpp  routing_test.cpp  sot_config.cpp  sra_udp_client.cpp  switch_config.cpp  udp_table_server.cpp  udp_table_server_example.cpp  vrf_table.cpp  vrf_udp_client.cpp
cmake/: CreateVersionedBinary.cmake  IncrementBuildNumber.cmake
common/: CMakeLists.txt
common/include/: print
common/include/common/: config.hpp  log.hpp  sot_config.hpp
common/src/: config.cpp  log.cpp  sot_config.cpp
config/: config.json  route_sot_v2.json  route_sot_v3_hw-15k.json  route_sot_v3_hw-15k_break.json  route_sot_v3_hwasic-15k.json  route_sot_v3_hwasic-1k.json  route_sot_v3_hwasic-5k.json  route_sot_v3_hwasic.json  rtsrv.json  srmd.json  switch_config.json
hooks/: install-hooks.sh  pre-commit
proto/: rtsrv.proto  srmd.proto
scripts/: clone_spawn-hw.sh  clone_spawn.sh  clone_srmd.sh  kill-sra-srmd.sh  kill-sra.sh  kill-srmd.sh  rebuild.sh  run-client.sh  run-server.sh  run-sra.sh  run-srmd-hw.sh  run-srmd-hwasic-15k.sh  run-srmd-hwasic-1k.sh  run-srmd-hwasic.sh  run-srmd.sh  run-target-srmd.sh  sra-echo.sh  sra-list.sh  sra-test.sh  sra-watch.sh  target-run-sra-hw.sh  target-run-sra.sh
scripts/vtysh/: config_leaf_1.sh  config_leaf_2.sh  config_leaf_3.sh  config_spine_1.sh  config_spine_2.sh
server/: CMakeLists.txt
server/include/server/: daemon.hpp  netlink.h  route_manager.hpp  service_impl.hpp  sot_config.hpp
server/src/: daemon.cpp  main.cpp  netlink.c  netlink_test.c  route_manager.cpp  service_impl.cpp  sot_config.cpp
src/: config.cpp  config.hpp  daemon.cpp  daemon.hpp  grpc_client.cpp  grpc_client.hpp  main.cpp
systemd/: rtsrv.service  srmd.service
test/: CMakeLists.txt  log_thread_test.cpp  route_add_single_iface.cpp
unix_domain/: CMakeLists.txt  ud_server.cpp
unix_domain/lib/: build_info.hpp  cmd_proto.cpp  cmd_proto.hpp  logger.cpp  logger.hpp  net.cpp  net.hpp  netlink.cpp  route_proto.cpp  route_proto.hpp  routing.hpp  ud_proto.cpp  ud_proto.hpp
